Changed my name

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ sass:
 
 # Authors
 ap:
-    name: Alexandros Protogerellis
+    name: Alex Protogerellis
     link: https://github.com/alexproto
 ma:
     name: Michael Asimakopoulos
