Updated people's links

--- a/_config.yml
+++ b/_config.yml
@@ -25,19 +25,19 @@ sass:
 # Authors
 ap:
     name: Alex Protogerellis
-    link: https://github.com/alexproto
+    link: http://uk.linkedin.com/in/protogerellis/
 ma:
     name: Michael Asimakopoulos
     link: https://github.com/masimplo
 zm:
     name: Zafeiris Malafouris
-    link: https://github.com/zafeirism
+    link: https://twitter.com/zafeirism
 vn:
     name: Valadis Novakovits
-    link: https://github.com/vnovakovits
+    link: https://twitter.com/el_nova
 mk:
     name: Manolis Koufidakis
-    link: https://github.com/ManolisKoufidakis
+    link: http://gr.linkedin.com/in/mkoufidakis/
 ka:
     name: Kostas Antonopoulos
     link: https://github.com/kostassite
