Add new post and images

--- a/_config.yml
+++ b/_config.yml
@@ -41,3 +41,6 @@ mk:
 ka:
     name: Kostas Antonopoulos
     link: https://github.com/kostassite
+vc:
+    name: Vasilis Christodoulou
+    link: https://www.linkedin.com/in/vasileios-christodoulou/
